<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="dam.teide.com.juegoprincipal.Login"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#c69c38">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/introduce_datos"
        android:id="@+id/textView2"
        android:textSize="25dp"
        android:background="@drawable/layaut_movimientos"
        android:typeface="serif" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:hint="@string/login"
        android:gravity="center"
        android:layout_marginTop="70dp"
        android:background="@drawable/botones"
        android:typeface="serif" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText2"
        android:hint="@string/contraseña"
        android:gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/botones"
        android:typeface="serif" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/olvidado_contraseña"
        android:id="@+id/textView3"
        android:textSize="12dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/layaut_movimientos"
        android:typeface="serif" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/registrarse"
        android:id="@+id/textView4"
        android:textSize="12dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/layaut_movimientos"
        android:typeface="serif" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entrar"
        android:id="@+id/btnEntrar"
        android:layout_marginTop="30dp"
        android:background="@drawable/boton"
        android:typeface="serif" />
</LinearLayout>
